Fixed Header Spacing
- removed height constraints

--- a/styles/pages/index/desktop.css
+++ b/styles/pages/index/desktop.css
@@ -3,10 +3,13 @@
 
 	/* ---------- header ---------- */
 	section.header {
-		height: 75vh;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
+	}
+
+	section.header >.content {
+		padding-top: 6rem;
 	}
 
 	/* ---------- about ---------- */
