--- a/styles/pages/index/tablet.css
+++ b/styles/pages/index/tablet.css
@@ -2,10 +2,6 @@
 @media only screen and (min-width: 40.063em) {
 
 	/* ---------- header ---------- */
-	section.header {
-		height: 45vh;
-	}
-
 	/* ---------- about container ---------- */
 
 	/* ---------- menu ---------- */
